--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
           <p>One Way Glass</p>
         </div>
         <div class="col">
-          <img class="grid-img" src="/img/Tinted-Glass_1.jpg" alt="" />
+          <img
+            class="grid-img"
+            src="https://www.buyglass.in/ofk_im/article/Tinted-Glass_1.jpg"
+            alt=""
+          />
           <p>Tinted Glass</p>
         </div>
       </div>
