--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div>
       <img
         class="img-fluid"
-        src="/img/landing-image-1.jpg"
+        src="https://img.freepik.com/free-vector/customers-tools-store-illustration_1441-3969.jpg?w=996&t=st=1708969159~exp=1708969759~hmac=c68a17368d5106371e7e40f236f5a3eaeeacbd5ac2235851ef48c785c59db8c1"
         alt="glass"
         srcset=""
       />
@@ -53,11 +53,19 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <img class="grid-img" src="/img/led-mirror.jpg" alt="" />
+          <img
+            class="grid-img"
+            src="https://flairglass.in/cdn/shop/files/SunDiscBorderTwin-LEDMirror-WarmLight-Round01copy.jpg?v=1684491144&width=840"
+            alt=""
+          />
           <p>LED Mirror</p>
         </div>
         <div class="col">
-          <img class="grid-img" src="/img/one-way.jpg" alt="" />
+          <img
+            class="grid-img"
+            src="https://media.licdn.com/dms/image/D5612AQEmvfT7liTb6w/article-cover_image-shrink_720_1280/0/1681105874641?e=1714608000&v=beta&t=WNPSCWixVwVNrQRdpXLfgUpv0QHGRJDHvwvMknisvVo"
+            alt=""
+          />
           <p>One Way Glass</p>
         </div>
         <div class="col">
