--- a/index.html
+++ b/index.html
@@ -53,27 +53,33 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <img
-            class="grid-img"
-            src="https://flairglass.in/cdn/shop/files/SunDiscBorderTwin-LEDMirror-WarmLight-Round01copy.jpg?v=1684491144&width=840"
-            alt=""
-          />
+          <a href="led-page.html">
+            <img
+              class="grid-img"
+              src="https://flairglass.in/cdn/shop/files/SunDiscBorderTwin-LEDMirror-WarmLight-Round01copy.jpg?v=1684491144&width=840"
+              alt=""
+            />
+          </a>
           <p>LED Mirror</p>
         </div>
         <div class="col">
-          <img
-            class="grid-img"
-            src="https://media.licdn.com/dms/image/D5612AQEmvfT7liTb6w/article-cover_image-shrink_720_1280/0/1681105874641?e=1714608000&v=beta&t=WNPSCWixVwVNrQRdpXLfgUpv0QHGRJDHvwvMknisvVo"
-            alt=""
-          />
+          <a href="one-way-glass.html">
+            <img
+              class="grid-img"
+              src="https://media.licdn.com/dms/image/D5612AQEmvfT7liTb6w/article-cover_image-shrink_720_1280/0/1681105874641?e=1714608000&v=beta&t=WNPSCWixVwVNrQRdpXLfgUpv0QHGRJDHvwvMknisvVo"
+              alt=""
+            />
+          </a>
           <p>One Way Glass</p>
         </div>
         <div class="col">
-          <img
-            class="grid-img"
-            src="https://www.buyglass.in/ofk_im/article/Tinted-Glass_1.jpg"
-            alt=""
-          />
+          <a href="tinted-glass-page.html">
+            <img
+              class="grid-img"
+              src="https://www.buyglass.in/ofk_im/article/Tinted-Glass_1.jpg"
+              alt=""
+            />
+          </a>
           <p>Tinted Glass</p>
         </div>
       </div>
